Added explanatory comments in all classes that require it. Cleaned up the Calculations class.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Modules"
+        android:text="@string/main_button_viewModules"
         android:id="@+id/main_button_viewModules"
         android:onClick="viewModules"
         android:paddingTop="10dp"
